# ONE-GameHosting-SDK

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.TXT  arcus-version.h.in  build-linux.md  build-windows.md  build.md  build_debug_linux.sh  build_debug_linux_32.sh  build_debug_linux_64.sh  build_debug_windows_32_mt.bat  build_debug_windows_32_mtdll.bat  build_debug_windows_64.bat  build_debug_windows_64_mt.bat  build_release_linux.sh  build_release_linux_32.sh  build_release_linux_64.sh  build_release_windows.bat  build_release_windows_32_mt.bat  build_release_windows_64_mt.bat  build_release_windows_64_mtdll.bat  clean_linux.sh  clean_windows.bat  ping-version.h.in  readme.md  run_fake_agent_debug.sh  run_fake_agent_release.sh  run_fake_game_debug.sh  run_fake_game_release.sh  run_tests_debug_long.sh  run_tests_debug_soak.sh  version.h.in  vscode.md
docs/: CMakeLists.txt  build.md  extra_style.css  integration_arcus.md  integration_guide.md  integration_ping.md  mainpage.md  readme.md  vscode.md
doxygen/: CMakeLists.txt  readme.md
one/agent/: CMakeLists.txt  agent.cpp  agent.h  client.cpp  client.h  log.cpp  log.h  main.cpp  readme.md
one/arcus/: CMakeLists.txt  allocator.cpp  allocator.h  arcus.cpp  arcus.h  array.cpp  array.h  c_api.cpp  c_api.h  c_error.cpp  c_error.h  c_platform.h  client.cpp  client.h  error.cpp  error.h  logger.h  message.cpp  message.h  object.cpp  object.h  opcode.h  platform.h  readme.md  server.cpp  server.h  types.cpp  types.h
one/arcus/internal/: accumulator.cpp  accumulator.h  codec.cpp  codec.h  connection.cpp  connection.h  endian.cpp  endian.h  health.cpp  health.h  message.cpp  message.h  messages.cpp  messages.h  mutex.h  opcodes.h  platform.h  ring.h  socket.cpp  socket.h  time.cpp  time.h  version.h
one/arcus/internal/rapidjson/: commit.txt  document.h  rapidjson.h
one/client/: CMakeLists.txt  c_api.h
one/client/internal/: client.cpp  client.h
one/fake/: readme.md
one/fake/arcus/agent/: CMakeLists.txt  agent.cpp  agent.h  log.cpp  main.cpp  readme.md
one/fake/game/: CMakeLists.txt  game.cpp  game.h  log.cpp  main.cpp  one_server_wrapper.cpp  one_server_wrapper.h  parsing.cpp  parsing.h  readme.md
one/fake/ping/: CMakeLists.txt  i3d_allocator.h  i3d_ip_list_wrapper.cpp  i3d_ip_list_wrapper.h  i3d_pingers_wrapper.cpp  i3d_pingers_wrapper.h  i3d_sites_getter_wrapper.cpp  i3d_sites_getter_wrapper.h  log.cpp  log.h  main.cpp  ping.cpp  ping.h  readme.md
one/game/: CMakeLists.txt  game.cpp  game.h  log.cpp  log.h  main.cpp  one_server_wrapper.cpp  one_server_wrapper.h  parsing.cpp  parsing.h  readme.md  server.cpp  server.h
one/host/: CMakeLists.txt  c_api.cpp  c_api.h
one/host/internal/: host.cpp
one/ping/: CMakeLists.txt  allocator.cpp  allocator.h  c_api.cpp  c_api.h  c_error.cpp  c_error.h  c_platform.h  error.cpp  error.h  ip_list.cpp  ip_list.h  logger.h  pingers.cpp  pingers.h  readme.md  sites_getter.cpp  sites_getter.h  types.cpp  types.h
one/ping/internal/: icmp_socket.cpp  icmp_socket.h  pinger.cpp  pinger.h  site_information.cpp  site_information.h  sites_endpoint.cpp  sites_endpoint.h  udp_socket.cpp  udp_socket.h  version.h
one/ping/internal/rapidjson/: rapidjson.h
one/server/: CMakeLists.txt  c_api.cpp  c_api.h  c_api_flat.h  readme.md
one/server/internal/: host.cpp  host.h  server.cpp  server.h
tests/: CMakeLists.txt  accumulator.cpp  agent.cpp  allocator.cpp  api.cpp  arcus.cpp  array.cpp  chaos.cpp  codec.cpp  concurrency.cpp  endian.cpp  error.cpp  game.cpp  harness.cpp  harness.h  integration.cpp  message.cpp  object.cpp  parsing.cpp  readme.md  ring.cpp  shared_lib.cpp  stress.cpp  testlib.cpp  util.cpp  util.h
tests/one/arcus/: accumulator.cpp  agent.cpp  allocator.cpp  api.cpp  arcus.cpp  array.cpp  chaos.cpp  codec.cpp  concurrency.cpp  connection.cpp  error.cpp  game.cpp  harness.cpp  harness.h  integration.cpp  message.cpp  object.cpp  parsing.cpp  stress.cpp  util.cpp  util.h
tests/one/ping/: http.cpp  icmp_socket.cpp  pinger.cpp  pingers.cpp  site_information.cpp  sites_endpoint.cpp  sites_getter.cpp  udp_socket.cpp
tests/unit/: agent.cpp  factorial.cpp  simple.cpp  socket.cpp
tools/: LinuxReleaseSharedBuild.dockerfile  build_debug_linux_64.sh  build_debug_linux_a_32.sh  build_debug_linux_so_32.sh  build_debug_linux_so_64.sh  build_debug_windows_32_mtdll.bat  build_debug_windows_dll_32_mt.bat  build_debug_windows_dll_32_mtdll.bat  build_debug_windows_dll_64_mt.bat  build_debug_windows_dll_64_mtdll.bat  build_debug_windows_dll_mt.bat  build_debug_windows_dll_mtdll.bat  build_debug_windows_lib_32_mt.bat  build_debug_windows_lib_32_mtdll.bat  build_debug_windows_lib_64_mt.bat  build_debug_windows_lib_64_mtdll.bat  build_debug_windows_lib_mtdll.bat  build_release_dlls.bat  build_release_linux_32.sh  build_release_linux_64.sh  build_release_linux_a_32.sh  build_release_linux_a_64.sh  build_release_linux_so_32.sh  build_release_linux_so_64.sh  build_release_windows_32_mtdll.bat  build_release_windows_64_mt.bat  build_release_windows_dll_32_mt.bat  build_release_windows_dll_32_mtdll.bat  build_release_windows_dll_64_mt.bat  build_release_windows_dll_64_mtdll.bat  build_release_windows_dll_mt.bat  build_release_windows_lib_32_mt.bat  build_release_windows_lib_32_mtdll.bat  build_release_windows_lib_64_mt.bat  build_release_windows_lib_64_mtdll.bat  build_release_windows_lib_mt.bat  clean_linux.sh  clean_windows.bat  readme.md  run_fake_agent_debug.sh  (+3 more)
tools/all/: readme.md
tools/linux/: build_debug_a.sh  build_debug_linux_a.sh  build_debug_linux_so.sh  build_debug_so.sh  build_release_a.sh  build_release_so.sh  clean.sh  clean_linux.sh  readme.md  run_fake_agent.sh  run_fake_agent_debug.sh  run_fake_agent_release.sh  run_fake_game.sh  run_fake_game_debug.sh  run_fake_ping.sh  test_debug_linux_long.sh  test_debug_linux_soak.sh  test_long.sh  test_short.sh  test_soak.sh
tools/windows/: build_debug_dll_mt.bat  build_debug_dll_mtdll.bat  build_debug_lib_mt.bat  build_debug_lib_mtdll.bat  build_release_dll_mt.bat  build_release_dll_mtdll.bat  clean.bat  readme.md  (+12 more)
(+14 files in other folders)
